# dbdg

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python.yml
levels/: level1.txt
src/dbdg/: game.py
src/dbdg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dbdg/engine/: grid.py  physics.py
tests/: test_physics.py
