[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbdg"
version = "0.1.0"
description = "Duly's Boulder Dash Game (Pygame)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="Duly" }]
dependencies = ["pygame>=2.5.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0","ruff>=0.5.0","black>=24.0.0","mypy>=1.7.0","pyinstaller>=6.0"]

[project.scripts]
dbdg = "dbdg.game:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","W","I","UP"]
ignore = []

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
